# Novozymes-Enzyme-Stability-Prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: 02_coral_vs_cogol_tutorial.ipynb
scripts/: explore.py  predict.py  train.py  tune.py
src/novozymes/: __init__.py  constants.py
src/novozymes/config/: base.py  data.py  model.py  training.py
src/novozymes/data/: base.py  datamodule.py  dataset.py  transforms.py
src/novozymes/evaluation/: metrics.py
src/novozymes/exploration/: bin_advisor.py  group_balance.py  label_stats.py  sequence_stats.py
src/novozymes/features/: base.py  esm_embedding.py  registry.py
src/novozymes/models/: base.py  esm_finetune.py  esm_frozen.py  registry.py
src/novozymes/models/heads/: base.py  cogol.py  coral.py  registry.py  regression.py
src/novozymes/training/: lightning_module.py
src/novozymes/training/losses/: base.py  cogol.py  coral.py  mse.py  registry.py
src/novozymes/tuning/: optuna_tuner.py
src/novozymes/utils/: logging.py  seed.py
tests/: test_config.py
tests/config/: test_base.py
tests/data/: test_dataset.py
tests/evaluation/: test_metrics.py
tests/exploration/: test_bin_advisor.py  test_group_balance.py  test_label_stats.py  test_sequence_stats.py
tests/features/: test_feature_extractor.py
tests/models/: test_heads.py  test_strategies.py
tests/training/: test_lightning_module.py
tests/training/losses/: test_losses.py
